--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
           </div>
         </nav>
 
+        <ui-view></ui-view>
+
         <section class="hero-content">
             <h1 class="hero-title">Turn the music up!</h1>
         </section>
@@ -42,6 +44,7 @@
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
         <script src="scripts/app.js"></script>
     </body>
 </html>
