--- a/app/index.html
+++ b/app/index.html
@@ -3,55 +3,35 @@
     <head lang="en">
         <title>Bloc Jams</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
-        <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
-        <link rel="stylesheet" type="text/css" href="styles/landing.css">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
+        <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
+        <link rel="stylesheet" type="text/css" href="/styles/main.css">
+        <link rel="stylesheet" type="text/css" href="/styles/landing.css">
     </head>
     <body class="landing">
         <nav class="navbar"> <!-- nav bar -->
-          <a href="index.html" class="logo">
+          <a ui-sref="landing" class="logo">
             <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
           </a>
           <div class="links-container">
-          <a ui-sref="collection.html" class="navbar-link">collection</a>
+          <a ui-sref="collection" class="navbar-link">collection</a>
           </div>
         </nav>
 
         <ui-view></ui-view>
 
-        <section class="hero-content">
-            <h1 class="hero-title">Turn the music up!</h1>
-        </section>
-
-        <section class="selling-points container clearfix">
-            <div class="point column third">
-                <span class="ion-music-note"></span>
-                <h5 class="point-title">Choose your music</h5>
-                <p class="point-description">The world is full of music; why should you have to listen to music that someone else chose?</p>
-            </div>
-            <div class="point column third">
-                <span class="ion-radio-waves"></span>
-                <h5 class="point-title">Unlimited, streaming, ad-free</h5>
-                <p class="point-description">No arbitrary limits. No distractions.</p>
-            </div>
-            <div class="point column third">
-                <span class="ion-iphone"></span>
-                <h5 class="point-title">Mobile enabled</h5>
-                <p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
-            </div>
-        </section>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
-        <script src="scripts/app.js"></script>
+        <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
+        <script src="/scripts/app.js"></script>
         <script src="/scripts/services/Fixtures.js"></script>
         <script src="/scripts/services/SongPlayer.js"></script>
         <script src="/scripts/controllers/LandingCtrl.js"></script>
         <script src="/scripts/controllers/CollectionCtrl.js"></script>
         <script src="/scripts/controllers/AlbumCtrl.js"></script>
         <script src="/scripts/controllers/PlayerBarCtrl.js"></script>
+        <script src="/scripts/directives/seekBar.js"></script>
     </body>
 </html>
