--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html ng-app="blocJams">
     <head lang="en">
-        <title>Bloc Jams</title>
+      <meta charset="UTF-8">
+        <title>Bloc Jams Angular</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
         <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="/styles/main.css">
         <link rel="stylesheet" type="text/css" href="/styles/landing.css">
+        <link rel="stylesheet" type="text/css" href="/styles/collection.css">
+        <link rel="stylesheet" type="text/css" href="/styles/album.css">
+        <link rel="stylesheet" type="text/css" href="/styles/player_bar.css">
     </head>
-    <body class="landing">
+    <body>
         <nav class="navbar"> <!-- nav bar -->
           <a ui-sref="landing" class="logo">
-            <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
+            <img src="/assets/images/bloc_jams_logo.png" alt="bloc jams logo">
           </a>
           <div class="links-container">
           <a ui-sref="collection" class="navbar-link">collection</a>
@@ -33,5 +37,6 @@
         <script src="/scripts/controllers/AlbumCtrl.js"></script>
         <script src="/scripts/controllers/PlayerBarCtrl.js"></script>
         <script src="/scripts/directives/seekBar.js"></script>
+        <script src="/scripts/filters/timecode.js"></script>
     </body>
 </html>
